RTMP server stream latency config.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -44391,6 +44391,9 @@
         }
       }
     },
+    "Zero or more milliseconds." : {
+
+    },
     "Zero or more milliseconds. Any latency parameter given in the URL overrides this value." : {
       "localizations" : {
         "de" : {
