Show charging icon when charging.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -2085,6 +2085,9 @@
         }
       }
     },
+    "⚠️ Audio is not yet supported." : {
+
+    },
     "🎉 You are LIVE at %@ 🎉" : {
       "localizations" : {
         "de" : {
