RTMP server audio warning.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -2085,7 +2085,7 @@
         }
       }
     },
-    "⚠️ Audio is not yet supported." : {
+    "⚠️ Audio is not yet implemented." : {
 
     },
     "🎉 You are LIVE at %@ 🎉" : {
