Only allow changing RTMP server settings when the server is disabled.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -13645,6 +13645,9 @@
         }
       }
     },
+    "Disable the server to change its settings." : {
+
+    },
     "Discord" : {
       "localizations" : {
         "de" : {
